--- a/lib/mango_web/templates/layout/admin_app_nav.html.eex
+++ b/lib/mango_web/templates/layout/admin_app_nav.html.eex
@@ -13,6 +13,12 @@
       <ul class="nav navbar-nav">
         <li><%= link "Sales", to: admin_order_path(@conn, :index) %></li>
         <li><%= link "Admin Users", to: admin_user_path(@conn, :index) %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">CRM<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link "Customers", to: admin_customer_path(@conn, :index) %></li>
+          </ul>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link "Logout", to: admin_session_path(@conn, :delete) %></li>
