--- a/lib/mango_web/templates/layout/app_nav.html.eex
+++ b/lib/mango_web/templates/layout/app_nav.html.eex
@@ -13,7 +13,8 @@
     </div>
     <div class="collapse navbar-collapse" id="primary-nav">
       <ul class="nav navbar-nav">
-        <li><a href="">Link</a></li>
+        <li><%= link "Fruits", to: category_path(@conn, :show, "fruits") %></li>
+        <li><%= link "Vegetables", to: category_path(@conn, :show, "vegetables") %></li>
       </ul>
     </div>
   </div>
