--- a/lib/mango_web/templates/category/show.html.eex
+++ b/lib/mango_web/templates/category/show.html.eex
@@ -1,9 +1,8 @@
 <h1 class="page-title"><%= title_case @name %></h1>
-<div>
+<div class="row">
   <%= for product <- @products do %>
-      <div class="product">
-          <div class="product-name"><%= product.name %></div>
-          <div>INR <span class="product-price"><%= product.price %></span></div>
-      </div>
+    <div class="col-md-4">
+      <%= render MangoWeb.ProductView, "product_card.html", product: product %>
+    </div>
   <% end %>
 </div>
