--- a/lib/mango_web/templates/layout/app_nav.html.eex
+++ b/lib/mango_web/templates/layout/app_nav.html.eex
@@ -17,6 +17,7 @@
         <li><%= link "Vegetables", to: category_path(@conn, :show, "vegetables") %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li><%= link cart_link_text(@conn), to: cart_path(@conn, :show), class: "cart nav-link" %></li>
         <%= if @customer do %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= @customer.name %><span class="caret"></span></a>
