--- a/lib/mango_web/templates/cart/show.html.eex
+++ b/lib/mango_web/templates/cart/show.html.eex
@@ -39,5 +39,6 @@
     <div class="form-group">
       <%= submit "Update Cart", class: "btn btn-primary" %>
     </div>
+    <%= link "Checkout", to: checkout_path(@conn, :edit), class: "btn btn-primary pull-right " %>    
   <% end %>
 <% end %>
