--- a/lib/mango_web/templates/layout/app_nav.html.eex
+++ b/lib/mango_web/templates/layout/app_nav.html.eex
@@ -18,6 +18,14 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link cart_link_text(@conn), to: cart_path(@conn, :show), class: "cart nav-link" %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-globe"></i> I18n<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li class="<%= get_active_locale_class("en") %>"><a href="?locale=en">English</a></li>
+            <li class="<%= get_active_locale_class("fr") %>"><a href="?locale=fr">Français</a></li>
+            <li class="<%= get_active_locale_class("de") %>"><a href="?locale=de">Deutsche</a></li>
+          </ul>
+        </li>
         <%= if @customer do %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= @customer.name %><span class="caret"></span></a>
